# eigenlag

./: .gitignore  CLAUDE.md  LICENSE  README.md  STATUS.md  pyproject.toml
.github/workflows/: ci.yml
cc-sessions/: 001_offen-scanner-harvest.md  002_offen-scanner-ast.md  003_offen-scan-run-report.md  004_offen-mathe-kern.md  005_offen-wikimedia-case.md  006_done-rescan-korrektur.md  007_done-airflow-parser.md  007_offen-airflow-parser.md  008_offen-dauern-schicht.md  009_done-cli.md  010_done-ci-gate.md  011_offen-packaging-readme.md  012_done-beschleunigungsplan.md  013_done-launch-kit.md  014_done-preflight-uebersetzung.md
docs/: ci-gate.md  pypi-release.md
eigenlag/: __init__.py  analyze.py  analyze_test.py  cli.py  cli_test.py  crosscheck_test.py  demo.py  demo_test.py  durations.py  durations_test.py  gate.py  gate_test.py  i18n_test.py  maxplus.py  maxplus_test.py  messages.py  messages_test.py  model.py  model_test.py  montecarlo.py  montecarlo_test.py  parse_airflow.py  parse_airflow_test.py  plan.py  plan_test.py  report.py  report_test.py  schedule.py  schedule_test.py
launch/: airflow-slack.md  build-demo-gif.sh  demo.tape  launch-checklist.md  readme-pypi-install.patch  reddit-post.md  release-notes-v0.1.0.md  review-fuer-gemini.md  wikimedia-mail.md
scan/: report.md  sample_verification.md  scan_dbt.csv  scan_factories.csv
scan/007_parse/: errors.jsonl  graph_check.csv  mismatches.jsonl  stats.json  teilpfad.csv  warnings.jsonl
scan/008_sensor/: nachlauf.csv  testfall_dop_sensor.py  testfall_gruppe.py
scan/009_cli/: lauf1_demo.txt  lauf1_minidag_report.txt  lauf2_airflow_report.txt  lauf3_postgres.txt  lauf4_wikiviews_report.txt  minidag_mini.py  verif_demo.py  verif_postgres.py
scan/010_gate/: lauf0_wikiviews_report_v2.txt  lauf1_v2_gegen_v1.md  lauf2_v3_gegen_v2.md  lauf3_unveraendert.md  lauf4_sekunden_modus.md  lauf5_selbst_anwendung.md
scan/012_plan/: lauf1_demo_plan_en.txt  lauf2_wikiviews_de.txt  lauf2_wikiviews_en.txt  lauf3_pair_en.txt  lauf4_readme_feature_pipeline.txt  verif_demo_plan.py  verif_pair.py
scan/012_plan/readme_demo/dags/: feature_pipeline.py
scan/013_launch/: demo_de.txt  demo_en.txt
scan/v2/: report.md  sample_verification.md  scan_dbt.csv
scanner/: analyze.py  analyze_dbt.py  analyze_dbt_test.py  analyze_test.py  clone.py  clone_test.py  harvest.py  harvest_test.py  parse_consistency_test.py  parse_corpus.py  report.py  report_test.py  run.py  run_test.py  schedule.py  schedule_test.py  sensor_followup.py  wrappers.py  wrappers_test.py
scanner/fixtures/repo_airflow/dags/: broken.py  comments.py  default_args.py  default_args_imported.py  sensors.py  taskflow.py  templates.py  two_dags.py  via_factory.py  with_dag.py
scanner/fixtures/repo_airflow/plugins/: kafka_factory.py
scanner/fixtures/repo_airflow/utils/: easy_dag.py  helpers.py
scanner/fixtures/repo_dbt/: dbt_project.yml
scanner/fixtures/repo_dbt/models/marts/: customers.sql  legacy.sql  orders.sql
scanner/fixtures/repo_dbt/models/staging/: schema.yml  sessions.sql  stg_events.sql  stg_users.sql
wiki/: architecture.md  changelog.md  decisions.md  index.md  log.md  math.md  maxplus_pipeline.py  positioning.md  roadmap.md  signals.md
wikimedia/: __init__.py  case.md  case.py  fetch.py  fetch_test.py  runs.py  runs_test.py  wikimedia_dags.csv
