[project]
name = "eigenlag"
version = "0.1.0"
description = "Rekurrenz-Analyzer für Daten-Pipelines: berechnet die nachhaltige minimale Taktzeit (Max-Plus-Eigenwert λ)"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[project.optional-dependencies]
# sqlalchemy in dev nur fuer die durations-Tests (SQLite-Fixture-DB).
dev = ["pytest", "ruff", "mypy", "sqlalchemy"]
# Nur der Scanner (Phase 1) braucht YAML: dbt_project.yml und die schema.yml neben den Models.
# Der eigenlag-Kern bleibt abhaengigkeitsfrei.
scanner = ["pyyaml", "types-PyYAML"]
# Dauern aus der Airflow-Metadaten-DB (from_metadata_db). Import ist lazy, der Kern
# laeuft ohne; REST (from_rest) braucht nur die stdlib.
db = ["sqlalchemy"]

[project.scripts]
eigenlag = "eigenlag.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["eigenlag"]  # Scanner und wikimedia sind Werkzeuge des Repos, kein Teil der CLI.

[tool.pytest.ini_options]
python_files = ["*_test.py"]
# data/ ist der Clone-Cache: fremde Repos bringen eigene Testfiles mit, die pytest sonst
# einsammelt und beim Import sprengt. scanner/fixtures ist Testdaten, nicht Testcode.
testpaths = ["eigenlag", "scanner", "wikimedia"]
norecursedirs = ["data", "scanner/fixtures", ".venv"]

[tool.ruff]
line-length = 100
target-version = "py312"
# Der Referenz-Prototyp bleibt unveraendert liegen (ADR-001), er ist Fixture, nicht Quellcode.
# scanner/fixtures ist ebenfalls Fixture: die Files bilden fremde Repos nach, samt kaputtem
# Python (dags/broken.py), toten Importen und Kommentar-Fallen. Sie sind Testdaten, kein Code.
# scan/ sind Lauf-Artefakte; die testfall_*.py dort sind der Beleg-Quelltext der
# Airflow-Verifikation (Session 008) und bleiben exakt wie gelaufen.
exclude = ["wiki/maxplus_pipeline.py", "scanner/fixtures", "scan"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.12"
strict = true
files = ["eigenlag", "scanner", "wikimedia"]
exclude = "scanner/fixtures"
